fix: add export to installer java-options; refactor java-options packaging structure